--- a/src/Registration/SignUp.css
+++ b/src/Registration/SignUp.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #bbbbb9; /* Light gray background for the whole page */
+    background-color: #f7f7f3; /* Light gray background for the whole page */
     /* body {
       background-image: url('bg1.jpg');
       background-size: cover;
